# ice-cli

./: Cargo.toml  readme.md
src/: api.rs  main.rs
src/api/: common.rs  status.rs  trip.rs
